<resources>
    <string name="app_name">Football League</string>
    <string name="title_league">Leagues</string>
    <string name="title_event">Events</string>
    <string name="title_favorite">Favorites</string>
    <string name="var_league">League</string>
    <string name="var_event">Event</string>
    <string name="var_date">Date UTC</string>
    <string name="var_time">Date Locale</string>
    <string name="var_team">Team</string>
    <string name="var_country">Country</string>
    <string name="var_website">Website</string>
    <string name="var_youtube">Youtube</string>
    <string name="var_description">Description</string>
    <string name="var_item_search">Search</string>
    <string name="var_item_detail">Detail</string>
    <string name="var_item_next">Next Match</string>
    <string name="var_item_prev">Previous Match</string>
    <string name="var_item_team">Teams</string>
    <string name="var_item_classement">Classement</string>
    <string name="var_msg_title">Delete Confirmation</string>
    <string name="var_msg">Are you sure want to delete this item?</string>
    <string name="msg_favorite">Added to Favorites.</string>
    <string name="row_no">No</string>
    <string name="row_team">Name Team</string>
    <string name="row_win">Win</string>
    <string name="row_loss">Loss</string>
    <string name="row_draw">Draw</string>
    <string-array name="league_logo">
        <item>@drawable/english_premier_league</item>
        <item>@drawable/french_ligue_1</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/american_mayor_league</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/australian_a_league</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </string-array>
    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
</resources>