<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_detail"
        android:icon="@drawable/ic_details_white_24dp"
        android:title="@string/var_item_detail" />

    <item
        android:id="@+id/navigation_classemnet"
        android:icon="@drawable/ic_device_hub_white_24dp"
        android:title="@string/var_item_classement" />

    <item
        android:id="@+id/navigation_team"
        android:icon="@drawable/ic_people_white_24dp"
        android:title="@string/var_item_team" />

    <item
        android:id="@+id/navigation_prev"
        android:icon="@drawable/ic_navigate_before_white_24dp"
        android:title="@string/var_item_prev" />

    <item
        android:id="@+id/navigation_next"
        android:icon="@drawable/ic_navigate_next_white_24dp"
        android:title="@string/var_item_next" />
</menu>