<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">


    <TableLayout
        android:id="@+id/tlClassement"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/row_no"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:padding="5dp"
                android:text="@string/row_team"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/row_win"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:padding="5dp"
                android:text="@string/row_loss"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/row_draw"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>